--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -198,7 +198,46 @@ jobs:
         run: npm run build
 
       - name: Run ESLint
-        run: npx eslint .
+        run: npx eslint . --ignore-pattern 'dist/*.js'
+
+  owasp-zap-scan:
+    runs-on: ubuntu-latest
+    name: Scan the webapplication
+    services:
+      postgres:
+        image: 'docker.io/bitnami/postgresql:15.3.0'
+        ports:
+          - '5432:5432'
+        env:
+          POSTGRESQL_USERNAME: quizmaster
+          POSTGRESQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRESQL_DATABASE: quizmaster
+          POSTGRESQL_TIMEZONE: Europe/Berlin
+          POSTGRESQL_LOG_TIMEZONE: Europe/Berlin
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Start Backend
+      - name: Start Backend
+        run: |
+          mvn spring-boot:run &
+          echo "Waiting for backend to start"
+          while ! nc -z localhost 8080; do sleep 1; done
+          echo "Backend started"
+        working-directory: ./
+        env:
+          QUIZ_API_KEY: ${{ secrets.QUIZ_API_KEY }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        timeout-minutes: 2
+      # Scan
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.5.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'http://localhost:8080/quiz'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
 
 #      # Run Dastardly security scan
 #      - name: Dastardly Scan Action
