--- a/.github/workflows/github.ci.yaml
+++ b/.github/workflows/github.ci.yaml
@@ -198,11 +198,10 @@ jobs:
         run: npm run build
 
       - name: Run ESLint
-        run: npx eslint . --ignore-pattern 'dist/*.js'
+        run: npx eslint . --ignore-pattern 'dist/**'
 
   owasp-zap-scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
     services:
       postgres:
         image: 'docker.io/bitnami/postgresql:15.3.0'
@@ -217,6 +216,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      # Set up JDK and cache Maven packages
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
       # Start Backend
       - name: Start Backend
         run: |
